--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-slate
 gems:
   - jekyll-redirect-from
+whitelist:
+  - jekyll-redirect-from
 redirect_to:
   - http://mconstanza.github.io/portfolio
